# demo-streamlit-fsl

./: .gitignore  README.md  fsl_classifier.py  pyproject.toml  requirements.txt  simple_few_shot_classifier.py  streamlit_simple_few_shot_classifier.py  tensorflow_utils.py
core/: fsl_classifier.py
example/: streamlit_simple_few_shot_classifier.py  streamlit_simple_few_shot_classifier_with_catalog_from_user.py  streamlit_simple_few_shot_classifier_with_input_from_user.py  streamlit_utils.py
